--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,7 +2,7 @@
 <% layout('layouts/boilerplate')%>
 
     <!-- map -->
-    <div id="cluster-map">
+    <div  class="mb-3" id="cluster-map">
     </div>
     <div class="container">
 
