--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -56,7 +56,7 @@
         <div class="col-6">
 
             <!-- map -->
-            <div id='map'>
+            <div class="mb-3" id='map'>
             </div>
 
             <div class="mb-3">
