add averageRating functionality

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,7 +2,7 @@
 <% layout('layouts/boilerplate')%>
 
     <!-- map -->
-    <div  class="mb-3" id="cluster-map">
+    <div class="mb-3" id="cluster-map">
     </div>
     <div class="container">
 
@@ -30,14 +30,29 @@
                             <h5 class="card-title">
                                 <%=campground.title%>
                             </h5>
+
                             <p class="card-text">
                                 <%=campground.description%>
                             </p>
+
                             <p class="card-text">
                                 <small class="text-muted">
                                     <%=campground.location%>
                                 </small>
                             </p>
+                            <!-- display average rating -->
+                            <p class="card-text">
+                                <small class="text-muted">
+                                    <% if (campground.reviews.length===0) {%>
+                                        The campground has not being reviewed
+                                        <% } else { %>
+                                            Current campground rating: <strong>
+                                                <%= campground.averageRating %>
+                                            </strong>
+                                            <% } %>
+                                </small>
+                            </p>
+
                             <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View
                                 <%=campground.title%>
                             </a>
