--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <!-- copy the code from bootstrap -->
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">YelpCamp</a>
+        <a class="navbar-brand" href="/">YelpCamp</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,6 +19,15 @@
                 </li>
             </ul>
         </div>
+
+        <!-- add search function -->
+        <div class="container-fluid">
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search Campground" aria-label="Search">
+                <button class=" ml-2 btn btn-dark btn-sm" type="submit"> Search </button>
+            </form>
+        </div>
+
         <div class="navbar-nav ml-auto">
             <% if(!currentUser) {%>
                 <a class="nav-link" href="/login">Login</a>
