--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -33,7 +33,7 @@
                             <p style="background-color:powderblue;">Be the first one to review this campground!</p>
                             <% } else {%>
                                 <p style="background-color:powderblue;">Current Campground Rating: </p>
-                                <p class="starability-result" data-rating="<%= campground.averageRating %>">
+                                <p class="starability-result" data-rating="<%= Math.round(campground.averageRating) %>">
                                 </p>
                                 <% } %>
                     </div>
@@ -73,7 +73,7 @@
                     <h2>Leave A Review</h2>
                     <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 needs-validation"
                         novalidate>
-                        <fieldset class="starability-basic">
+                        <fieldset class="starability-slot">
                             <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0"
                                 checked aria-label="No rating." />
                             <input type="radio" id="first-rate1" name="review[rating]" value="1" />
