--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <!-- copy the code from bootstrap -->
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-success">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">YelpCamp</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -18,14 +18,6 @@
                     <a class="nav-link" href="/campgrounds/new">New</a>
                 </li>
             </ul>
-        </div>
-
-        <!-- add search function -->
-        <div class="container-fluid">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search Campground" aria-label="Search">
-                <button class=" ml-2 btn btn-dark btn-sm" type="submit"> Search </button>
-            </form>
         </div>
 
         <div class="navbar-nav ml-auto">
